WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35086
[Qt][GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails (DRT sideeffect)
https://bugs.webkit.org/show_bug.cgi?id=35086
Summary
[Qt][GTK] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails (DRT...
Csaba Osztrogonác
Reported
2010-02-18 03:27:13 PST
fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails on Qt buildbot from
http://trac.webkit.org/changeset/54944
. result:
http://build.webkit.org/results/Qt%20Linux%20Release/r54948%20(7523)/results.html
fast/xmlhttprequest/xmlhttprequest-no-file-access.html is a new test introduced in
r54944
, which cause that fail. Both of them pass if we run them in separated DRT, so it must be a DRT sideeffect problem. You can reproduce it easily: $ WebKitTools/Scripts/run-webkit-tests fast/xmlhttprequest/xmlhttprequest-no-file-access.html fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html
Attachments
proposed fix
(1.56 KB, patch)
2011-04-19 06:43 PDT
,
Kristóf Kosztyó
ossy
: review-
ossy
: commit-queue-
Details
Formatted Diff
Diff
proposed fix
(2.86 KB, patch)
2011-04-19 07:22 PDT
,
Kristóf Kosztyó
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-02-18 04:01:50 PST
fast/xmlhttprequest/xmlhttprequest-no-file-access.html skipped by
http://trac.webkit.org/changeset/54954
until fix.
Gustavo Noronha (kov)
Comment 2
2010-02-18 13:06:32 PST
Yep, we seem to also suffer from this.
Philippe Normand
Comment 3
2011-04-07 07:15:17 PDT
fast/xmlhttprequest/xmlhttprequest-no-file-access.html passes locally on GTK. I'll unskip it.
Csaba Osztrogonác
Comment 4
2011-04-12 05:34:54 PDT
I checked, the bug is still valid for Qt.
Kristóf Kosztyó
Comment 5
2011-04-19 06:43:42 PDT
Created
attachment 90194
[details]
proposed fix
Laszlo Gombos
Comment 6
2011-04-19 06:46:15 PDT
Should the change include the Skipped file change as well ?
Csaba Osztrogonác
Comment 7
2011-04-19 06:46:39 PDT
Comment on
attachment 90194
[details]
proposed fix LGTM, r=me.
Csaba Osztrogonác
Comment 8
2011-04-19 06:48:39 PDT
(In reply to
comment #6
)
> Should the change include the Skipped file change as well ?
Ooops, yes.
Csaba Osztrogonác
Comment 9
2011-04-19 06:49:06 PDT
Comment on
attachment 90194
[details]
proposed fix We need to unskip the tests too.
Kristóf Kosztyó
Comment 10
2011-04-19 07:22:54 PDT
Created
attachment 90199
[details]
proposed fix
Andreas Kling
Comment 11
2011-04-19 07:24:54 PDT
Comment on
attachment 90199
[details]
proposed fix Nice catch, r=me
WebKit Commit Bot
Comment 12
2011-04-19 09:01:32 PDT
Comment on
attachment 90199
[details]
proposed fix Clearing flags on attachment: 90199 Committed
r84256
: <
http://trac.webkit.org/changeset/84256
>
WebKit Commit Bot
Comment 13
2011-04-19 09:01:36 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 14
2011-04-19 10:41:55 PDT
http://trac.webkit.org/changeset/84256
might have broken Windows 7 Release (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug