2011-04-19  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

Reviewed by Andreas Kling.

        [Qt] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails (DRT sideeffect)
        https://bugs.webkit.org/show_bug.cgi?id=35086

        * platform/qt/Skipped: unskip fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html
2011-04-19  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Andreas Kling.

        [Qt] fast/xmlhttprequest/xmlhttprequest-nonexistent-file.html fails (DRT sideeffect)
        https://bugs.webkit.org/show_bug.cgi?id=35086

        fast/xmlhttprequest/xmlhttprequest-no-file-access.html caused
        a DRT sideeffect problem, because the resetSettings didn't set
        the default value of LocalContentCanAccessFileUrls.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::resetSettings):

git-svn-id: svn://svn.chromium.org/blink/trunk@84256 bbb929c8-8fbe-4397-9dbb-9b2b20218538